# skal

./: CMakeLists.txt  README.md  main.odin
.github/workflows/: build-and-test.yml
cli/: cli.odin
config/: config.odin
parser/: parser.odin
shell/: shell.odin
src/: core.cxx  core.hxx  main.cxx  parser.cxx  parser.hxx  result.hxx  shell.cxx  shell.hxx
test/: core_test.cxx  core_test.hxx  parser_test.cxx  parser_test.hxx  shell_test.cxx  shell_test.hxx  test.cxx  test.hxx
tests/: test.odin
